--- a/render.yaml
+++ b/render.yaml
@@ -15,7 +15,7 @@ services:
       - key: DEBUG
         value: False
       - key: ALLOWED_HOSTS
-        value: .onrender.com
+        value:  backend-render-2-s1rw.onrender.com,.onrender.com
       - key: DATABASE_URL
         fromDatabase:
           name: redball-cricket-db
